# memwatch

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  SPEC.md  build.rs
examples/: README.md  mpi_distributed_compute.rs
examples/build_pipeline/: Cargo.toml  Makefile
examples/build_pipeline/scripts/: codegen.py  run_tests.js
examples/build_pipeline/src/: data_table.inc
src/: cli.rs  csv_writer.rs  lib.rs  main.rs  reporter.rs  sampler.rs  types.rs
src/inspector/: linux.rs  macos.rs  mod.rs
workloads/: README.md  mpi_distributed_compute.rs
workloads/build_pipeline/: .gitignore  README.md
workloads/build_pipeline/scripts/: package.py  validate_data.pl
workloads/build_pipeline/src/: lib_helper.c  lib_helper.h
