[package]
name = "memwatch"
version = "0.1.0"
edition = "2024"
authors = ["Alvin Kuruvilla"]
license = "MIT"
description = "Cross-platform job-level memory profiler for tracking total memory, per-process memory, and peak memory usage"
repository = "https://github.com/AlvinKuruvilla/memwatch"
homepage = "https://github.com/AlvinKuruvilla/memwatch"
documentation = "https://github.com/AlvinKuruvilla/memwatch#readme"
readme = "README.md"
keywords = ["profiler", "memory", "monitoring", "performance"]
categories = ["command-line-utilities", "development-tools::profiling"]

[[bin]]
name = "memwatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
chrono = "0.4"
